added about me and profile picture, with links

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <title>Catholic Prayer Spot</title>
         <meta name="Catholic Prayer Spot" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <nav>
+            <a href="./aboutme.html">About Me</a>
+        </nav>
+        <div class="greeting">
+            <h1>Welcome to Catholic Prayer Spot</h1>
+            <h2>A newly created and still very much in progress site for all your essential Catholic prayer needs</h2>
+        </div>
     </body>
 </html>
