--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
     </head>
     <body>
         <nav>
-            <a href="./aboutme.html">About Me</a>
+            <a href="./about-me.html">About Me</a>
         </nav>
         <div class="greeting">
             <h1>Welcome to Catholic Prayer Spot</h1>
-            <h2>A newly created and still very much in progress site for all your essential Catholic prayer needs</h2>
+            <h2>A newly created, and still very much in progress, site for all your essential Catholic prayer needs</h2>
         </div>
+        <div class="marianDropdown">
+            <button onclick="dropdownFunction()" class="dropdownButton">Marian Prayers</button>
+            <div id="myDropdown" class="marianDropdownContent">
+              <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
+              <a href="./prayers/marian/memorare.html">The Memorare</a>
+              <a href="#">Link 3</a>
+            </div>
+          </div>
     </body>
+    <footer>Last updated: 9/28/2023</footer>
+    <script src="./javascript/index.js" async defer></script>
 </html>
