started adding content to rosary page

--- a/prayers/marian/the-holy-rosary.html
+++ b/prayers/marian/the-holy-rosary.html
@@ -6,15 +6,64 @@
         <title>The Holy Rosary</title>
         <meta name="The Holy Rosary" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <nav>
-            <a href="https://catholic-prayer-spot.neocities.org/index.html">Home</a>
-            <a href="https://catholic-prayer-spot.neocities.org/about-me.html">About Me</a>
+            <a href="/index.html">Home</a>
+            <a href="/about-me.html">About Me</a>
         </nav>
-        <h2>The Holy Rosary</h2>
-        
-
+        <h2 id="rosaryBanner">The Holy Rosary</h2>
+        <div class="howToPrayContainer">
+            <div class="howToPrayChild">
+                <h3>How to pray the Rosary:</h3>
+                <ol>
+                    <li>
+                        Hold the Crucifix, and make the Sign of the Cross.
+                    </li>
+                    <li>
+                        Pray the <a href="#apostles-creed">Apostle's Creed</a>
+                    </li>
+                    <li>
+                        On the first bead, pray the <a href="#our-father">Our Father</a>
+                    </li>
+                </ol>
+                <img src="/images/rosary-layout.png" alt="picture of rosary"/>
+            </div>
+            <div class="howToPrayChild">
+                <h3>The mysteries of the Rosary:</h3>
+            </div>
+            <div class="howToPrayChild">
+                <h3>The prayers of the Rosary:</h3>
+                <p>If you are praying with someone else, or a group of people, <strong>person 1</strong> is the leader, and <strong>person 2</strong> prays the responses.</p>
+                <p>If you are praying alone, lead and respond to yourself</p>
+                <ul>
+                    <li>
+                        <h4 id="apostles-creed">The Apostle's Creed:</h4>
+                        <p>
+                            <strong>Person 1:</strong> believe in God, the Father almighty, Creator of heaven and earth, and in Jesus Christ, his only Son, our Lord, who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died and was buried; he descended into hell; on the third day he rose again from the dead; he ascended into heaven, and is seated at the right hand of God the Father almighty; from there he will come to judge the living and the dead.
+                        </p>
+                        <p>
+                            <strong>Person 2:</strong>I believe in the Holy Spirit, the holy catholic Church, the communion of saints, the forgiveness of sins, the resurrection of the body, and life everlasting. Amen.
+                        </p>
+                    </li>
+                    <li>
+                        <h4 id="our-father">The Our Father:</h4>
+                        <p>
+                            <strong>Person 1:</strong>Our Father, who art in heaven, hallowed be thy name; thy kingdom come, thy will be done on earth as it is in heaven.
+                        </p>
+                        <p>
+                            <strong>Person 2:</strong>Give us this day our daily bread, and forgive us our trespasses, as we forgive those who trespass against us; and lead us not into temptation, but deliver us from evil. Amen.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </body>
+    <footer>
+        <h4>Citations:</h4>
+        <ul>
+            
+        </ul>
+    </footer>
 </html>
