--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Catholic Prayer Spot</title>
         <meta name="Catholic Prayer Spot" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <nav>
@@ -25,6 +25,6 @@
             </div>
           </div>
     </body>
-    <footer>Last updated: 9/28/2023</footer>
+    <footer>Last updated: 10/4/2023</footer>
     <script src="./javascript/index.js" async defer></script>
 </html>
