--- a/prayers/marian/memorare.html
+++ b/prayers/marian/memorare.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>The Memorare</title>
         <meta name="The Memorare" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav>
+            <a href="/index.html">Home</a>
+        </nav>
         <h2>The Memorare</h2>
         
     </body>
