--- a/prayers/marian/the-holy-rosary.html
+++ b/prayers/marian/the-holy-rosary.html
@@ -28,7 +28,11 @@
                         On the first bead, pray the <a href="#our-father">Our Father</a>
                     </li>
                 </ol>
-                <img src="/images/rosary-layout.png" alt="picture of rosary"/>
+                <figure>
+                    <img src="/images/rosary-layout.png" alt="picture of rosary"/>
+                    <figcaption class="caption">(How to Pray the Rosary)</figcaption>
+                </figure>
+                
             </div>
             <div class="howToPrayChild">
                 <h3>The mysteries of the Rosary:</h3>
@@ -63,7 +67,9 @@
     <footer>
         <h4>Citations:</h4>
         <ul>
-            
+            <li>
+                "How to Pray the Rosary." <i>USCCB</i>, 4 Oct. 2023, www.usccb.org/how-to-pray-the-rosary
+            </li>
         </ul>
     </footer>
 </html>
