added mysteries table and beginning/middle prayers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="myDropdown" class="marianDropdownContent">
               <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
               <a href="./prayers/marian/memorare.html">The Memorare</a>
-              <a href="#">Link 3</a>
+              <!-- <a href="#">Prayer or saint of the day? API fetch</a> -->
             </div>
           </div>
     </body>
