--- a/prayers/marian/the-holy-rosary.html
+++ b/prayers/marian/the-holy-rosary.html
@@ -17,6 +17,7 @@
         <div class="howToPrayContainer">
             <div class="howToPrayChild">
                 <h3>How to pray the Rosary:</h3>
+                <!-- links should open a pop up window, instead of scrolling down the page -->
                 <ol>
                     <li>
                         Hold the Crucifix, and make the Sign of the Cross.
@@ -27,6 +28,15 @@
                     <li>
                         On the first bead, pray the <a href="#our-father">Our Father</a>
                     </li>
+                    <li>
+                        Pray one <a href="#hail-mary">Hail Mary</a> on each of the next three beads.
+                    </li>
+                    <li>
+                        Pray the <a href="#glory-be">Glory Be</a>.
+                    </li>
+                    <li>
+                        For each of the five decades, announce the <a href="#mysteries">Mystery</a> (perhaps followed by a brief reading from Scripture) then pray the Our Father.
+                    </li>
                 </ol>
                 <figure>
                     <img src="/images/rosary-layout.png" alt="picture of rosary"/>
@@ -35,29 +45,85 @@
                 
             </div>
             <div class="howToPrayChild">
-                <h3>The mysteries of the Rosary:</h3>
+                <h3 id="mysteries">The mysteries of the Rosary:</h3>
+                <!-- Stylize table -->
+                <p>
+                    There are specific mysteries set to reflect on when praying the Rosary. Each set of mysteries is assigned a specific day of the week on which you should reflect if praying the rosary that day.
+                </p>
+                <table class="mysteriesTable">
+                    <tr>
+                        <th>Day of the week</th>
+                        <th>Mysteries for that day</th>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>Glorious Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Monday</td>
+                        <td>Joyful Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>Sorrowful Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>Glorious Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>Luminous Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>Sorrowful Mysteries</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>Joyful Mysteries</td>
+                    </tr>
+                </table>
             </div>
             <div class="howToPrayChild">
                 <h3>The prayers of the Rosary:</h3>
-                <p>If you are praying with someone else, or a group of people, <strong>person 1</strong> is the leader, and <strong>person 2</strong> prays the responses.</p>
+                <p>If you are praying with someone else, or a group of people, someone typically <strong>leads</strong> the prayer, and the second person (or group) pray the <strong>response</strong></p>
                 <p>If you are praying alone, lead and respond to yourself</p>
                 <ul>
                     <li>
-                        <h4 id="apostles-creed">The Apostle's Creed:</h4>
+                        <h4 id="apostles-creed">The Apostle's Creed</h4>
                         <p>
-                            <strong>Person 1:</strong> believe in God, the Father almighty, Creator of heaven and earth, and in Jesus Christ, his only Son, our Lord, who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died and was buried; he descended into hell; on the third day he rose again from the dead; he ascended into heaven, and is seated at the right hand of God the Father almighty; from there he will come to judge the living and the dead.
+                            <strong>Lead:</strong> I believe in God, the Father almighty, Creator of heaven and earth, and in Jesus Christ, his only Son, our Lord, who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died and was buried; he descended into hell; on the third day he rose again from the dead; he ascended into heaven, and is seated at the right hand of God the Father almighty; from there he will come to judge the living and the dead.
                         </p>
                         <p>
-                            <strong>Person 2:</strong>I believe in the Holy Spirit, the holy catholic Church, the communion of saints, the forgiveness of sins, the resurrection of the body, and life everlasting. Amen.
+                            <strong>Response:</strong> I believe in the Holy Spirit, the holy catholic Church, the communion of saints, the forgiveness of sins, the resurrection of the body, and life everlasting. Amen.
                         </p>
                     </li>
                     <li>
-                        <h4 id="our-father">The Our Father:</h4>
+                        <h4 id="our-father">The Our Father</h4>
                         <p>
-                            <strong>Person 1:</strong>Our Father, who art in heaven, hallowed be thy name; thy kingdom come, thy will be done on earth as it is in heaven.
+                            <strong>Lead:</strong> Our Father, who art in heaven, hallowed be thy name; thy kingdom come, thy will be done on earth as it is in heaven.
                         </p>
                         <p>
-                            <strong>Person 2:</strong>Give us this day our daily bread, and forgive us our trespasses, as we forgive those who trespass against us; and lead us not into temptation, but deliver us from evil. Amen.
+                            <strong>Response:</strong> Give us this day our daily bread, and forgive us our trespasses, as we forgive those who trespass against us; and lead us not into temptation, but deliver us from evil. Amen.
+                        </p>
+                    </li>
+                    <li>
+                        <h4 id="hail-mary">The Hail Mary</h4>
+                        <p>
+                            <strong>Lead:</strong> Hail, Mary, full of grace, the Lord is with thee. Blessed art thou among women and blessed is the fruit of thy womb, Jesus.
+                        </p>
+                        <p>
+                            <strong>Response:</strong> Holy Mary, Mother of God, pray for us sinners, now and at the hour of our death. Amen.
+                        </p>
+                    </li>
+                    <li>
+                        <h4 id="glory-be">The Glory Be</h4>
+                        <p>
+                            <strong>Lead:</strong> Glory be to the Father, and to the Son, and to the Holy Spirit.
+                        </p>
+                        <p>
+                            <strong>Response:</strong> As it was in the beginning is now, and ever shall be world without end. Amen.
                         </p>
                     </li>
                 </ul>
