--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div id="myDropdown" class="marianDropdownContent">
               <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
               <a href="./prayers/marian/memorare.html">The Memorare</a>
-              <!-- <a href="#">Prayer or saint of the day? API fetch</a> -->
+              <!-- <a href="#">Saint of the day API fetch</a> -->
             </div>
           </div>
     </body>
-    <footer>Last updated: 10/4/2023</footer>
+    <footer>Last updated: 10/13/2023</footer>
     <script src="./javascript/index.js" async defer></script>
 </html>
