--- a/prayers/marian/the-holy-rosary.html
+++ b/prayers/marian/the-holy-rosary.html
@@ -6,7 +6,7 @@
         <title>The Holy Rosary</title>
         <meta name="The Holy Rosary" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/styles/the-holy-rosary.css">
     </head>
     <body>
         <nav>
@@ -17,22 +17,70 @@
         <div class="howToPrayContainer">
             <div class="howToPrayChild">
                 <h3>How to pray the Rosary:</h3>
-                <!-- links should open a pop up window, instead of scrolling down the page -->
                 <ol>
                     <li>
                         Hold the Crucifix, and make the Sign of the Cross.
                     </li>
                     <li>
-                        Pray the <a href="#apostles-creed">Apostle's Creed</a>
+                        Pray the 
+                        <div class="dropdown">Apostle's Creed 
+                            <div class="dropdownContent">
+                                <h4>The Apostle's Creed</h4>
+                                <p>
+                                    <strong>Lead:</strong> I believe in God, the Father almighty, Creator of heaven and earth, and in Jesus Christ,
+                                    his only Son, our Lord, who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died and was buried; he descended into hell; on the third day he rose again from the dead; he ascended into heaven, and is seated at the right hand of God the Father almighty; from there he will come to judge the living and the dead.
+                                </p>
+                                <p>
+                                    <strong>Response:</strong> I believe in the Holy Spirit, the holy catholic Church, the communion of saints, 
+                                    the forgiveness of sins, the resurrection of the body, and life everlasting. Amen.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        On the first bead, pray the <a href="#our-father">Our Father</a>
+                        On the first bead, pray the 
+                        <div class="dropdown">Our Father
+                            <div class="dropdownContent">
+                                <h4 id="our-father">The Our Father</h4>
+                                <p>
+                                    <strong>Lead:</strong> Our Father, who art in heaven, hallowed be thy name; thy kingdom come, thy will 
+                                    be done on earth as it is in heaven.
+                                </p>
+                                <p>
+                                    <strong>Response:</strong> Give us this day our daily bread, and forgive us our trespasses, as we forgive 
+                                    those who trespass against us; and lead us not into temptation, but deliver us from evil. Amen.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        Pray one <a href="#hail-mary">Hail Mary</a> on each of the next three beads.
+                        Pray one 
+                        <div class="dropdown">Hail Mary
+                            <div class="dropdownContent">
+                                <h4 id="hail-mary">The Hail Mary</h4>
+                                <p>
+                                    <strong>Lead:</strong> Hail, Mary, full of grace, the Lord is with thee. Blessed art thou among women and blessed 
+                                    is the fruit of thy womb, Jesus.
+                                </p>
+                                <p>
+                                    <strong>Response:</strong> Holy Mary, Mother of God, pray for us sinners, now and at the hour of our death. Amen.
+                                </p>
+                            </div>
+                        </div> on each of the ten beads.
                     </li>
                     <li>
-                        Pray the <a href="#glory-be">Glory Be</a>.
+                        Pray the 
+                        <div class="dropdown">Glory Be.
+                            <div class="dropdownContent">
+                                <h4 id="glory-be">The Glory Be</h4>
+                                <p>
+                                    <strong>Lead:</strong> Glory be to the Father, and to the Son, and to the Holy Spirit.
+                                </p>
+                                <p>
+                                    <strong>Response:</strong> As it was in the beginning is now, and ever shall be world without end. Amen.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         For each of the five decades, announce the <a href="#mysteries">Mystery</a> (perhaps followed by a brief reading from Scripture) then pray the Our Father.
@@ -41,12 +89,45 @@
                         Pray a Hail Mary for each bead of the decade, keeping track with your fingers as you go. After the ten Hail Marys, pray the Glory Be.
                         <ul>
                             <li>
-                                Most people pray the <a href="#fatima-prayer">Fatima Prayer</a> here. 
+                                Most people pray the 
+                                <div class="dropdown">Fatima Prayer 
+                                    <div class="dropdownContent">
+                                        <h4 id="fatima-prayer">The Fatima Prayer</h4>
+                                        <p>
+                                            <strong>All:</strong> O my Jesus, forgive us our sins, save us from the fires of hell; lead all souls to Heaven,
+                                            especially those who have most need of your mercy.
+                                        </p>
+                                    </div>
+                                </div>
+                                here. 
                             </li>
                         </ul>
                     </li>
                     <li>
-                        After saying the five decades, pray the <a href="#hail-holy-queen">Hail Holy Queen</a>, and concluding prayers.
+                        After saying the five decades, pray the 
+                            <div class="dropdown">Hail Holy Queen
+                            <div class="dropdownContent">
+                                <h4 id="hail-holy-queen">The Hail Holy Queen (and concluding prayers)</h4>
+                                <p>
+                                    <strong>All:</strong> Hail, Holy Queen, Mother of Mercy, our life, our sweetness and our hope. To thee do we cry, poor banished children of Eve.
+                                    To thee do we send up our sighs, mourning and weeping in this valley of tears. Turn then, most gracious advocate,
+                                    thine eyes of mercy toward us, and after this our exile show unto us the blessed fruit of thy womb, Jesus. O clement, O loving, O sweet Virgin Mary.
+                                </p>
+                                <p>
+                                    <strong>Lead:</strong> Pray for us, O holy Mother of God.
+                                </p>
+                                <p>
+                                    <strong>Response:</strong> That we may be made worthy of the promises of Christ.
+                                </p>
+                                <p>
+                                    <strong>All:</strong> O God, whose Only Begotten Son, by his life, Death, and Resurrection, 
+                                    has purchased for us the rewards of eternal life, grant, we beseech thee, that while meditating 
+                                    on these mysteries of the most holy Rosary of the Blessed Virgin Mary, we may imitate what they contain 
+                                    and obtain what they promise, through the same Christ our Lord. Amen.
+                                </p>
+                            </div>
+                        </div>
+                        , and concluding prayers.
                     </li>
                 </ol>
                 <figure>
@@ -96,90 +177,14 @@
                     </tr>
                 </table>
             </div>
-            <div class="howToPrayChild">
-                <h3>The prayers of the Rosary:</h3>
-                <p>If you are praying with someone else, or a group of people, someone typically <strong>leads</strong> the prayer,
-                     and the second person (or group) pray the <strong>response</strong></p>
-                <p>If you are praying alone, lead and respond to yourself</p>
-                <ul>
-                    <li>
-                        <h4 id="apostles-creed">The Apostle's Creed</h4>
-                        <p>
-                            <strong>Lead:</strong> I believe in God, the Father almighty, Creator of heaven and earth, and in Jesus Christ,
-                             his only Son, our Lord, who was conceived by the Holy Spirit, born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died and was buried; he descended into hell; on the third day he rose again from the dead; he ascended into heaven, and is seated at the right hand of God the Father almighty; from there he will come to judge the living and the dead.
-                        </p>
-                        <p>
-                            <strong>Response:</strong> I believe in the Holy Spirit, the holy catholic Church, the communion of saints, 
-                            the forgiveness of sins, the resurrection of the body, and life everlasting. Amen.
-                        </p>
-                    </li>
-                    <li>
-                        <h4 id="our-father">The Our Father</h4>
-                        <p>
-                            <strong>Lead:</strong> Our Father, who art in heaven, hallowed be thy name; thy kingdom come, thy will 
-                            be done on earth as it is in heaven.
-                        </p>
-                        <p>
-                            <strong>Response:</strong> Give us this day our daily bread, and forgive us our trespasses, as we forgive 
-                            those who trespass against us; and lead us not into temptation, but deliver us from evil. Amen.
-                        </p>
-                    </li>
-                    <li>
-                        <h4 id="hail-mary">The Hail Mary</h4>
-                        <p>
-                            <strong>Lead:</strong> Hail, Mary, full of grace, the Lord is with thee. Blessed art thou among women and blessed 
-                            is the fruit of thy womb, Jesus.
-                        </p>
-                        <p>
-                            <strong>Response:</strong> Holy Mary, Mother of God, pray for us sinners, now and at the hour of our death. Amen.
-                        </p>
-                    </li>
-                    <li>
-                        <h4 id="glory-be">The Glory Be</h4>
-                        <p>
-                            <strong>Lead:</strong> Glory be to the Father, and to the Son, and to the Holy Spirit.
-                        </p>
-                        <p>
-                            <strong>Response:</strong> As it was in the beginning is now, and ever shall be world without end. Amen.
-                        </p>
-                    </li>
-                    <li>
-                        <h4 id="fatima-prayer">The Fatima Prayer</h4>
-                        <p>
-                            <strong>All:</strong> O my Jesus, forgive us our sins, save us from the fires of hell; lead all souls to Heaven,
-                             especially those who have most need of your mercy.
-                        </p>
-                    </li>
-                    <li>
-                        <h4 id="hail-holy-queen">The Hail Holy Queen (and concluding prayers)</h4>
-                        <p>
-                            <strong>All:</strong> Hail, Holy Queen, Mother of Mercy, our life, our sweetness and our hope. To thee do we cry, poor banished children of Eve.
-                            To thee do we send up our sighs, mourning and weeping in this valley of tears. Turn then, most gracious advocate,
-                            thine eyes of mercy toward us, and after this our exile show unto us the blessed fruit of thy womb, Jesus. O clement, O loving, O sweet Virgin Mary.
-                        </p>
-                        <p>
-                            <strong>Lead:</strong> Pray for us, O holy Mother of God.
-                        </p>
-                        <p>
-                            <strong>Response:</strong> That we may be made worthy of the promises of Christ.
-                        </p>
-                        <p>
-                            <strong>All:</strong> O God, whose Only Begotten Son, by his life, Death, and Resurrection, 
-                            has purchased for us the rewards of eternal life, grant, we beseech thee, that while meditating 
-                            on these mysteries of the most holy Rosary of the Blessed Virgin Mary, we may imitate what they contain 
-                            and obtain what they promise, through the same Christ our Lord. Amen.
-                        </p>
-                    </li>
-                </ul>
-            </div>
         </div>
+        <footer>
+            <h4>Citations:</h4>
+            <ul>
+                <li>
+                    "How to Pray the Rosary." <i>USCCB</i>, 4 Oct. 2023, www.usccb.org/how-to-pray-the-rosary
+                </li>
+            </ul>
+        </footer>
     </body>
-    <footer>
-        <h4>Citations:</h4>
-        <ul>
-            <li>
-                "How to Pray the Rosary." <i>USCCB</i>, 4 Oct. 2023, www.usccb.org/how-to-pray-the-rosary
-            </li>
-        </ul>
-    </footer>
 </html>
