--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@
         <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/styles/about-me.css">
     </head>
     <body>
         <nav>
