--- a/prayers/marian/memorare.html
+++ b/prayers/marian/memorare.html
@@ -6,13 +6,22 @@
         <title>The Memorare</title>
         <meta name="The Memorare" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/styles/memorare.css">
     </head>
     <body>
         <nav>
             <a href="/index.html">Home</a>
         </nav>
         <h2>The Memorare</h2>
-        
+        <div class="memorareContainer">
+            <div class="memorareChild">
+                <p>
+                    Remember, O most gracious Virgin Mary, that never was it known that anyone who fled to thy protection, 
+                    implored thy help, or sought thy intercession, was left unaided. Inspired by this confidence I fly unto thee, 
+                    O Virgin of virgins, my Mother. To thee do I come, before thee I stand, sinful and sorrowful. O Mother of the Word Incarnate,
+                    despise not my petitions, but in thy mercy hear and answer me. Amen.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
