added rosary mystery links, stylized rosary page

--- a/prayers/marian/the-holy-rosary.html
+++ b/prayers/marian/the-holy-rosary.html
@@ -16,7 +16,7 @@
         <h2 id="rosaryBanner">The Holy Rosary</h2>
         <div class="howToPrayContainer">
             <div class="howToPrayChild">
-                <h3>How to pray the Rosary:</h3>
+                <h3 class="childTitle">How to pray the Rosary:</h3>
                 <ol>
                     <li>
                         Hold the Crucifix, and make the Sign of the Cross.
@@ -66,7 +66,7 @@
                                     <strong>Response:</strong> Holy Mary, Mother of God, pray for us sinners, now and at the hour of our death. Amen.
                                 </p>
                             </div>
-                        </div> on each of the ten beads.
+                        </div> on each of the three beads.
                     </li>
                     <li>
                         Pray the 
@@ -131,49 +131,49 @@
                     </li>
                 </ol>
                 <figure>
-                    <img src="/images/rosary-layout.png" alt="picture of rosary"/>
+                    <img id="rosaryImg" src="/images/rosary-layout.png" alt="picture of rosary"/>
                     <figcaption class="caption">(How to Pray the Rosary)</figcaption>
                 </figure>
                 
             </div>
             <div class="howToPrayChild">
-                <h3 id="mysteries">The mysteries of the Rosary:</h3>
+                <h3 id="mysteries" class="childTitle">The mysteries of the Rosary:</h3>
                 <!-- Stylize table -->
                 <p>
                     There are specific mysteries set to reflect on when praying the Rosary. Each set of mysteries is assigned a specific day of the week on which you should reflect if praying the rosary that day.
                 </p>
-                <table class="mysteriesTable">
+                <table class="mysteriesTable" rules="all">
                     <tr>
                         <th>Day of the week</th>
                         <th>Mysteries for that day</th>
                     </tr>
                     <tr>
                         <td>Sunday</td>
-                        <td>Glorious Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/glorious-mysteries">Glorious Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Monday</td>
-                        <td>Joyful Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/joyful-mysteries">Joyful Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Tuesday</td>
-                        <td>Sorrowful Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/sorrowful-mysteries">Sorrowful Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Wednesday</td>
-                        <td>Glorious Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/glorious-mysteries">Glorious Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Thursday</td>
-                        <td>Luminous Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/luminous-mysteries">Luminous Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Friday</td>
-                        <td>Sorrowful Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/sorrowful-mysteries">Sorrowful Mysteries</a></td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
-                        <td>Joyful Mysteries</td>
+                        <td><a target="_blank" href="https://marian.org/mary/rosary/joyful-mysteries">Joyful Mysteries</a></td>
                     </tr>
                 </table>
             </div>
@@ -181,6 +181,9 @@
         <footer>
             <h4>Citations:</h4>
             <ul>
+                <li>
+                    “Devotion to Mary.” <i>Marians of the Immaculate Conception</i>, 11 Aug. 2022, marian.org/mary/devotion. 
+                </li>
                 <li>
                     "How to Pray the Rosary." <i>USCCB</i>, 4 Oct. 2023, www.usccb.org/how-to-pray-the-rosary
                 </li>
