--- a/prayers/marian/memorare.html
+++ b/prayers/marian/memorare.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="/index.html">Home</a>
         </nav>
-        <h2>The Memorare</h2>
+        <h2 id="memorareBanner">The Memorare</h2>
         <div class="memorareContainer">
             <div class="memorareChild">
                 <p>
