fetch request to index working, need to parse to HTML

--- a/index.html
+++ b/index.html
@@ -13,22 +13,52 @@
             <h1>Catholic Prayer Spot</h1>
             <h2>A newly created, and still very much in progress, site for all your essential Catholic prayer needs</h2>
         </div>
-        <div id="prayerBar">
-            <h3>Prayer Categories</h3>
-            <div class="dropdown">
-                <button class="dropdownButton">Marian Prayers</button>
-                <div class="dropdownContent">
-                    <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
-                    <a href="./prayers/marian/memorare.html">The Memorare</a>
+        <div id="indexContentContainer">
+            <div id="prayerBar">
+                <h3>Prayer Categories</h3>
+                <div class="dropdown">
+                    <button class="dropdownButton">Marian Prayers</button>
+                    <div class="dropdownContent">
+                        <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
+                        <a href="./prayers/marian/memorare.html">The Memorare</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropdownButton">Daily Prayers and Reflections</button>
+                    <div class="dropdownContent">
+                        <a target="_blank" href="https://www.catholic.org/saints/sofd.php">Saint of the Day</a>
+                    </div>
                 </div>
             </div>
-            <div class="dropdown">
-                <button class="dropdownButton">Daily Prayers and Reflections</button>
-                <div class="dropdownContent">
-                    <a href="">Saint of the Day</a>
-                </div>
-            </div>
+            <!-- <div id="churchCalendar">
+                <h3>Today in the Liturgical Year (feature under development)</h3>
+                <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info</button>
+                Fetch request goes into this table
+                <table id="liturgicalTable" rules="all">
+                    <tr>
+                        <th>Date</th>
+                        <th>Season</th>
+                        <th>Season Week</th>
+                        <th>Celebration</th>
+                    </tr>
+                    <tr>
+                        <td>
+
+                        </td>
+                        <td>
+
+                        </td>
+                        <td>
+
+                        </td>
+                        <td>
+
+                        </td>
+                    </tr>
+                </table>
+            </div> -->
         </div>
     </body>
     <footer>Last updated: 10/16/2023 <a href="./about-me.html">About Me</a></footer>
+    <script src="/javascript/index.js"></script>
 </html>
