fetch to today's calendar table works, needs styling

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
                     </div>
                 </div>
             </div>
-            <!-- <div id="churchCalendar">
-                <h3>Today in the Liturgical Year (feature under development)</h3>
+            <div id="churchCalendar">
+                <h3>Today in the Liturgical Year</h3>
                 <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info</button>
-                Fetch request goes into this table
                 <table id="liturgicalTable" rules="all">
                     <tr>
                         <th>Date</th>
@@ -41,22 +40,11 @@
                         <th>Season Week</th>
                         <th>Celebration</th>
                     </tr>
-                    <tr>
-                        <td>
-
-                        </td>
-                        <td>
-
-                        </td>
-                        <td>
-
-                        </td>
-                        <td>
-
-                        </td>
-                    </tr>
+                    <tbody id = "tbody">
+                        
+                    </tbody>
                 </table>
-            </div> -->
+            </div>
         </div>
     </body>
     <footer>Last updated: 10/16/2023 <a href="./about-me.html">About Me</a></footer>
