stylized liturgical table and aboutme, need to center profile picture

--- a/about-me.html
+++ b/about-me.html
@@ -12,11 +12,10 @@
         <nav>
             <a href="./index.html">Home</a>
         </nav>
-        <h1 class = "primaryheader">ABOUT ME</h1>
-        <h2>Michael Kienbusch</h2>
-        <img id="profilePicture" alt="profile picture" src="./images/Profile cropped-reduced.png">
-        <div id = "aboutparentcontainer">
-            <div class = "aboutcontainer">
+        <h2 id="aboutMeBanner">About Me</h2>
+        <div id = "aboutParentContainer">
+            <img id="profilePicture" alt="profile picture" src="./images/Profile cropped-reduced.png">
+            <div class = "aboutContainer">
                 <h2>Background</h2>
                 <p>
                     I am a cradle Catholic who grew up in Colorado. I graduated college in 2014, and have been working in the military/law enforcement fields ever since. I am working on changing careers as a web developer, and I created this site as a fun little side project - bringing my faith and passion for programming together.
