API call on homepage isn't working once deployed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="churchCalendar">
                 <h3>Today in the Liturgical Year</h3>
-                <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info</button>
+                <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info (in progress function)</button>
                 <table id="liturgicalTable" rules="all">
                     <tr>
                         <th>Date</th>
