added church info section on home, and baptism placeholder

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                     </div>
                 </div>
             </div>
+            <div id = churchInfo>
+                <h3>Information about the Church</h3>
+                <div class="dropdown">
+                    <button class="dropdownButton">Sacraments</button>
+                    <div class="dropdownContent">
+                        <a target="_blank" href="/church-info/baptism.html">Baptism</a>
+                    </div>
+                </div>
+            </div>
             <div id="churchCalendar">
                 <h3>Today in the Liturgical Year</h3>
                 <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info (in progress function)</button>
