added boilerplate pages for church sacraments

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="dropdown">
                     <button class="dropdownButton">Marian Prayers</button>
                     <div class="dropdownContent">
-                        <a href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
-                        <a href="./prayers/marian/memorare.html">The Memorare</a>
+                        <a target="_blank" href="./prayers/marian/the-holy-rosary.html">The Holy Rosary</a>
+                        <a target="_blank" href="./prayers/marian/memorare.html">The Memorare</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -33,13 +33,20 @@
             <div id = churchInfo>
                 <h3>Information about the Church</h3>
                 <div class="dropdown">
-                    <button class="dropdownButton">Sacraments</button>
+                    <button class="dropdownButton">The Sacraments</button>
                     <div class="dropdownContent">
                         <a target="_blank" href="/church-info/baptism.html">Baptism</a>
+                        <a target="_blank" href="/church-info/reconciliation.html">Reconciliation</a>
+                        <a target="_blank" href="/church-info/confirmation.html">Confirmation</a>
+                        <a target="_blank" href="/church-info/eucharist.html">Eucharist</a>
+                        <a target="_blank" href="/church-info/matrimony.html">Matrimony</a>
+                        <a target="_blank" href="/church-info/holy-orders.html">Holy Orders</a>
+                        <a target="_blank" href="/church-info/anointing-of-the-sick.html">Anointing of the Sick</a>
                     </div>
                 </div>
             </div>
-            <div id="churchCalendar">
+            <!-- only works when run locally for some reason -->
+            <!-- <div id="churchCalendar">
                 <h3>Today in the Liturgical Year</h3>
                 <button id="liturgicalButton" onclick="liturgicalClick()">Click to get info (in progress function)</button>
                 <table id="liturgicalTable" rules="all">
@@ -53,9 +60,9 @@
                         
                     </tbody>
                 </table>
-            </div>
+            </div> -->
         </div>
     </body>
-    <footer>Last updated: 11/4/2023 <a href="./about-me.html">About Me</a></footer>
+    <footer>Last updated: 12/17/2023 <a href="./about-me.html">About Me</a></footer>
     <script src="/javascript/index.js"></script>
 </html>
