added basic info and link to USCCB for all sacraments - baptism styling is not updating on neocities

--- a/church-info/anointing-of-the-sick.html
+++ b/church-info/anointing-of-the-sick.html
@@ -15,8 +15,21 @@
         <h2 id="anointingOfTheSickBanner">The Sacrament of Anointing of the Sick</h2>
         <div class="anointingOfTheSickContainer">
             <div class="anointingOfTheSickChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    In the Church's Sacrament of Anointing of the Sick, throughthe ministry of the priest, it is Jesus who touches the sick to heal them from sin – and sometimes even from physical ailment. His cures were signs of the arrival of the Kingdom of God. The core message of his healing tells us of his plan to conquer sin and death by his dying and rising.
+                </p>
+                <p>
+                    The Rite of Anointing tells us there is no need to wait until a person is at the point of death to receive the Sacrament. A careful judgment about the serious nature of the illness is sufficient.
+                </p>
+                <p>
+                    When the Sacrament of Anointing of the Sick is given, the hoped-for effect is that, if it be God's will, the person be physically healed of illness. But even if there is no physical healing, the primary effect of the Sacrament is a spiritual healing by which the sick person receives the Holy Spirit's gift of peace and courage to deal with the difficulties that accompany serious illness or the frailty of old age.
+                </p>
+            </div>
+            <div class="anointingOfTheSickChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/anointing-of-the-sick">here</a>
                 </p>
             </div>
         </div>
