--- a/church-info/baptism.html
+++ b/church-info/baptism.html
@@ -15,8 +15,18 @@
         <h2 id="baptismBanner">The Sacrament of Baptism</h2>
         <div class="baptismContainer">
             <div class="baptismChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    The origin and foundation of Christian Baptism is Jesus.  Before starting his public ministry, Jesus submitted himself to the baptism given by John the Baptist.  The waters did not purify him; he cleansed the waters.  . . .  Jesus did not need to be baptized because he was totally faithful to the will of his Father and free from sin.  However, he wanted to show his solidarity with human beings in order to reconcile them to the Father. By commanding his disciples to baptize all nations, he established the means by which people would die to sin - Original and actual - and begin to live a new life with God.
+                </p>
+                <p>
+                    In Baptism, the Holy Spirit moves us to answer Christ's call to holiness. In Baptism, we are asked to walk by the light of Christ and to trust in his wisdom. We are invited to submit our hearts to Christ with ever deeper love.
+                </p>
+            </div>
+            <div class="baptismChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/baptism">here</a>
                 </p>
             </div>
         </div>
