--- a/church-info/confirmation.html
+++ b/church-info/confirmation.html
@@ -14,9 +14,19 @@
         </nav>
         <h2 id="confirmationBanner">The Sacrament of Confirmation</h2>
         <div class="confirmationContainer">
-            <div class="confiramtionChild">
+            <div class="confirmationChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    The prophets of the Old Testament foretold that God's Spirit would rest upon the Messiah to sustain his mission.  Their prophecy was fulfilled when Jesus the Messiah was conceived by the Spirit and born of the Virgin Mary.  The Holy Spirit descended on Jesus on the occasion of his baptism by John.  Jesus' entire mission occurred in communion with the Spirit. Before he died, Jesus promised that the Spirit would be given to the Apostles and to the entire Church.  After his death, he was raised by the Father in the power of the Spirit.
+                </p>
+                <p>
+                    Confirmation deepens our baptismal life that calls us to be missionary witnesses of Jesus Christ in our families, neighborhoods, society, and the world.  . . .  We receive the message of faith in a deeper and more intensive manner with great emphasis given to the person of Jesus Christ, who asked the Father to give the Holy Spirit to the Church for building up the community in loving service.
+                </p>
+            </div>
+            <div class="confirmationChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/confirmation">here</a>
                 </p>
             </div>
         </div>
