--- a/church-info/eucharist.html
+++ b/church-info/eucharist.html
@@ -15,8 +15,15 @@
         <h2 id="eucharistBanner">The Sacrament of The Eucharist</h2>
         <div class="eucharistContainer">
             <div class="eucharistChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    In the celebration of the Eucharist, bread and wine become the Body and Blood of Jesus Christ through the power of the Holy Spirit and the instrumentality of the priest. The whole Christ is truly present -- body, blood, soul, and divinity -- under the appearances of bread and wine, the glorified Christ who rose from the dead. This is what the Church means when she speaks of the "Real Presence" of Christ in the Eucharist.
+                </p>
+            </div>
+            <div class="eucharistChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/eucharist">here</a>
                 </p>
             </div>
         </div>
