--- a/church-info/holy-orders.html
+++ b/church-info/holy-orders.html
@@ -15,8 +15,18 @@
         <h2 id="holyOrdersBanner">The Sacrament of Holy Orders</h2>
         <div class="holyOrdersContainer">
             <div class="holyOrdersChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    From the moment of Jesus' conception in the womb of Mary until his Resurrection, he was filled with the Holy Spirit.  In biblical language, he was anointed by the Holy Spirit and thus established by God the Father as our high priest. As Risen Lord, he remains our high priest. . . . While all the baptized share in Christ's priesthood, the ministerial priesthood shares this through the Sacrament of Holy Orders in a special way. 
+                </p>
+                <p>
+                    Ordination to the priesthood is always a call and a gift from God. Christ reminded his Apostles that they needed to ask the Lord of the harvest to send laborers into the harvest.  Those who seek priesthood respond generously to God's call using the words of the prophet, "Here I am, send me" (Is 6:8).  This call from God can be recognized and understood from the daily signs that disclose his will to those in charge of discerning the vocation of the candidate.
+                </p>
+            </div>
+            <div class="holyOrdersChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/holy-orders">here</a>
                 </p>
             </div>
         </div>
