--- a/church-info/matrimony.html
+++ b/church-info/matrimony.html
@@ -15,8 +15,21 @@
         <h2 id="matrimonyBanner">The Sacrament of Matrimony</h2>
         <div class="matrimonyContainer">
             <div class="matrimonyChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    Sacred Scripture begins with the creation and union of man and woman and ends with "the wedding feast of the Lamb" (Rev 19:7, 9). Scripture often refers to marriage, its origin and purpose, the meaning God gave to it, and its renewal in the covenant made by Jesus with his Church.  Man and woman were created for each other.
+                </p>
+                <p>
+                    By their marriage, the couple witnesses Christ's spousal love for the Church. One of the Nuptial Blessings in the liturgical celebration of marriage refers to this in saying, "Father, you have made the union of man and wife so holy a mystery that it symbolizes the marriage of Christ and his Church." 
+                </p>
+                <p>
+                    The Sacrament of Marriage is a covenant, which is more than a contract. Covenant always expresses a relationship between persons. The marriage covenant refers to the relationship between the husband and wife, a permanent union of persons capable of knowing and loving each other and God. The celebration of marriage is also a liturgical act, appropriately held in a public liturgy at church. Catholics are urged to celebrate their marriage within the Eucharistic Liturgy.
+                </p>
+            </div>
+            <div class="matrimonyChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/matrimony">here</a>
                 </p>
             </div>
         </div>
