--- a/church-info/reconciliation.html
+++ b/church-info/reconciliation.html
@@ -12,11 +12,21 @@
         <nav>
             <a href="/index.html">Home</a>
         </nav>
-        <h2 id="reconciliationBanner">The Sacrament of Reconciliation</h2>
+        <h2 id="reconciliationBanner">The Sacrament of Reconciliation (Penance)</h2>
         <div class="reconciliationContainer">
             <div class="reconciliationChild">
+                <h3>Basic Information</h3>
                 <p>
-                    INFO/CITATION
+                    Not onlydoes the Sacrament of Reconciliation (penance) free us from our sins but it also challenges us to have the same kind of compassion and forgiveness for those who sin against us.  We are liberated to be forgivers.  We obtain new insight into the words of the Prayer of St. Francis: "It is in pardoning that we are pardoned."
+                </p>
+                <p>
+                    Jesus entrusted the ministry of reconciliation to the Church.  The Sacrament of Penance is God's gift to us so that any sin committed after Baptism can be forgiven.  In confession we have the opportunity to repent and recover the grace of friendship with God. It is a holy moment in which we place ourselves in his presence and honestly acknowledge our sins, especially mortal sins.  With absolution, we are reconciled to God and the Church. The Sacrament helps us stay close to the truth that we cannot live without God. "In him we live and move and have our being" (Acts 17:28). 
+                </p>
+            </div>
+            <div class="reconciliationChild">
+                <h3>More Information</h3>
+                <p>
+                    The United States Conference of Catholic Bishops has more information <a target="_blank" href="https://www.usccb.org/prayer-and-worship/sacraments-and-sacramentals/penance">here</a>
                 </p>
             </div>
         </div>
